File: plugins/nexus-blobstore-s3/src/main/java/org/sonatype/nexus/blobstore/s3/S3BlobStoreConfigurationHelper.java